--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,10 +1,15 @@
-// #root {
-//   max-width: 1280px;
-//   margin: 0 auto;
-//   padding: 2rem;
-//   text-align: center;
-// }
-
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  
+ 
+}
+body{
+ background-color: grey;
+  
+}
 .found{
   height: 100vh;
   width: 100vh;
