--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,21 +3,165 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+$text-color: #ffffff;
+$background-color: #2d2d2d;
+$border-color: #740001; // Color granate para los bordes
+
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: $background-color;
+  color: $text-color;
+  text-align: center;
+}
+
+// Estilos para Header
+.header {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  background-color: #000;
+
+  img {
+    width: 300px;
+  }
+}
+
+// Estilos para CharacterList
+.character-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+// Estilos para CharacterCard
+.card-list {
+  background-color: #444;
+  padding: 15px;
+  border-radius: 10px;
+  text-align: center;
+  transition: transform 0.3s;
+  color: $text-color;
+  text-decoration: none;
+  border: 2px solid $border-color; // Borde granate
+
+  &:hover {
+    transform: scale(1.05);
+   
+  }
+
+  img {
+    width: 100px;
+    border-radius: 10px;
+  }
+
+  h3, h4 {
+    margin: 5px 0;
+    text-decoration: none;
+
+  }
+}
+
+// Estilos para CharacterDetail
+.card-detail {
+  max-width: 500px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #333;
+  border-radius: 10px;
+  text-decoration: none;
+  border: 3px solid $border-color; // Borde granate más grueso
   
- 
+
+  img {
+    width: 150px;
+    border-radius: 10px;
+  }
 }
-body{
- background-color: grey;
-  
+
+// Estilos para filtros
+.filters-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+
+  input, select {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+  }
 }
-.found{
-  height: 100vh;
-  width: 100vh;
-  background-image: url(../images/notfound.webp) ;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+
+// Estilos para filtros indiv
+.filter-name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
+
+.filter-name-label {
+  font-weight: bold;
+}
+
+.filter-name-input {
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.filter-house {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.filter-house-label {
+  font-weight: bold;
+}
+
+
+// Estilos para NotFound
+.not-found {
+  text-align: center;
+  margin-top: 50px;
+  padding: 20px;
+  background-color: #444;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+.not-found h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.not-found p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.not-found-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #740001;
+  color: $text-color;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: darken(#740001, 10%);
+  }
+}
+
+
+
+
 
 
 
